Fixes spacing sizing on the index page hero image. All minor changes.

--- a/sass/index_page_preload.scss
+++ b/sass/index_page_preload.scss
@@ -76,7 +76,6 @@
 	}	
 	
 	}
-
 	
 .navigation-menu
 	{
@@ -193,21 +192,21 @@ ul
 .hero-art
 	{
 	width:100%;
-	max-width:1300px;
-	padding:0 0 38%;
-	margin:0;
-	background-image:url('siteart/cruxbg_placeholder.jpg');
+	max-width:1600px;
+	padding:0 0 37%;
+	margin:0 auto;
+	background-image:url('siteart/pl_hero_index.jpg');
 	background-attachment:fixed;
 	background-size:100% auto;
 	position:relative;
 	min-height:300px;
 	
-		@media screen and (max-width:em(730)) 
+		@media screen and (max-width:em(800)) 
 		{
 		height:300px;
 		background-size:auto 300px;
 		background-position:center top;	
-		background-image:url('siteart/cruxbg_placeholder_small.jpg');
+		background-image:url('siteart/sm_hero_index.jpg');
 		}
 	
 	}
